# CloudCompare_plugins

./: LICENSE  README.md
qUDPTransfer/: CMakeLists.txt  info.json  qUDPTransfer.qrc
qUDPTransfer/include/: qUDPPointCloud.h  qUDPTransfer.h  qUDPTransferDlg.h
qUDPTransfer/src/: qUDPPointCloud.cpp  qUDPTransfer.cpp  qUDPTransferDlg.cpp
qUDPTransfer/ui/: qUDPTransfer.ui
qVolumeMeasure/: CMakeLists.txt  info.json  qVolumeMeasure.qrc
qVolumeMeasure/include/: qVolumeMeasure.h  qVolumeMeasureDlg.h
qVolumeMeasure/src/: qVolumeMeasure.cpp  qVolumeMeasureDlg.cpp
qVolumeMeasure/ui/: qVolumeMeasure.ui
qXYZILoader/: CMakeLists.txt  info.json  qXYZILoader.qrc
qXYZILoader/include/: XYZIFilter.h  XYZILoaderIOPlugin.h
qXYZILoader/src/: XYZIFilter.cpp  XYZILoaderIOPlugin.cpp
